# trading-view-parser

./: .gitignore  README.md  __main__.py  config.py  pyproject.toml  trading_types.py  tradingview_scraper.py
src/parser/: IdeasSaver.py  TradingViewScraper.py  __main__.py  config.py  models.py  parse_funcs.py  types.py
tests/: test_trading_view_scraper.py
