[tool.poetry]
name = "tradingview_scraper"
version = "0.1.0"
description = "App for parsing ideas from www.tradingview.com"
license = "MIT"
authors = ["usrsem <andrey7menov@gmail.com>"]

packages = [
    { include = "parser", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
loguru = "^0.6.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "parser.__main__:main"
